test/must_fail/api/must_fail_file_read_not_found.ngjs
#!/usr/bin/env ngspicejs
// Non existent file
// linter: ngspicejs-lint
"use strict";

file_read('asdf');
